[Fix] Overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,26 @@
 .app {
-  width: 25rem;
+  width: 100%;
   margin: 0 auto;
-  height: 94vh;
+  height: 100vh;
   background-color: whitesmoke;
-  border-radius: 9px;
-  padding: 20px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  padding: 1em;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  
+  overflow: hidden;
+}
+
+@media(min-width: 768px) {
+  .app {
+    width: 25rem;
+    margin: 0 auto;
+    height: 94vh;
+    background-color: whitesmoke;
+    border-radius: 15px;
+    padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  }
 }
 
 /* 
