--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
   background: -webkit-linear-gradient(to top, #eef2f3, #8e9eab);
   /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to bottom, #eef2f3, #8e9eab) !important;
+  background-repeat: no-repeat;
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
@@ -19,7 +20,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  height: 100vh;
 }
 
 * {
